--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>WebGazer for Qualtrics</title>
+  <title>WebEyeTrack for Qualtrics</title>
   <style>
     * {
       margin: 0;
@@ -147,7 +147,7 @@
 <body>
   <div class="container">
     <header>
-      <h1>WebGazer for Qualtrics</h1>
+      <h1>WebEyeTrack for Qualtrics</h1>
       <p class="subtitle">Eye tracking calibration for survey research</p>
     </header>
 
@@ -169,7 +169,7 @@
       <p>Test the eye tracking calibration experiment:</p>
       <a href="experiments/calibration.html" class="demo-link" target="_blank">Launch Demo</a>
       <p style="margin-top: 15px; color: #666; font-size: 0.95em;">
-        The demo includes camera initialization, calibration, validation, and optional recalibration if accuracy is low.
+        The demo includes camera permission flow, clear instructions, calibration with green dots, validation with blue dots, and optional recalibration if accuracy is low.
       </p>
     </div>
 
@@ -197,7 +197,7 @@
   </div>
 
   <footer>
-    <p>Built with <a href="https://www.jspsych.org/" target="_blank" style="color: #3498db;">jsPsych</a> and <a href="https://webgazer.cs.brown.edu/" target="_blank" style="color: #3498db;">WebGazer.js</a></p>
+    <p>Built with <a href="https://www.jspsych.org/" target="_blank" style="color: #3498db;">jsPsych</a> and <a href="https://github.com/RedForestAI/WebEyeTrack" target="_blank" style="color: #3498db;">WebEyeTrack</a></p>
     <p style="margin-top: 10px;">Licensed under MIT</p>
   </footer>
 </body>
